group 'net.reflxction'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: "application"
apply from: 'http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin'

sourceCompatibility = targetCompatibility = 1.8
mainClassName = "net.reflxction.binary.BinaryConverter"

repositories {
    mavenCentral()
}

javafx {
    // Application name and ID presented by target OS
    appID 'BinaryConverter'
    appName 'Binary Converter'

    // Main class of application
    mainClass 'net.reflxction.binary.BinaryConverter'

    // JVM arguments, system properties, application command line arguments
    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']

    // Keystore credentials for signing JAR
    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
    releaseKey {
        alias = 'release'
        keyPass = getProjectProperty('keyStorePassword')
        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
        storePass = getProjectProperty('storePassword')
    }

    signingMode 'release'
}


String getProjectProperty(String propertyName) {
    project.hasProperty(propertyName) ? project.property(propertyName) : null
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/java"]
            includes = ["**/*.css"]
        }
    }
}